--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
     <name>bookshop</name>
     <url>http://maven.apache.org</url>
     <dependencies>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -21,7 +28,6 @@
             <version>3.8.0</version>
             <scope>test</scope>
         </dependency>
-
 
     </dependencies>
 </project>
